--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   file_picker: ^5.2.6
   bitsdojo_window: ^0.1.5
+  bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
+  meta: ^1.8.0
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
