--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.5 <3.0.0'
+  sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
   flutter:
@@ -30,12 +30,14 @@ dependencies:
   flutter_bloc: ^8.1.2
   meta: ^1.8.0
   path: ^1.8.2
+  petitparser: ^5.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  test: ^1.22.0
 
 flutter:
 
