--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   bitsdojo_window: ^0.1.5
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
+  riverpod: ^2.3.6
+  flutter_riverpod: ^2.3.6
   meta: ^1.8.0
   path: ^1.8.2
   petitparser: ^5.1.0
