--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,18 @@ dependencies:
   meta: ^1.8.0
   path: ^1.8.2
   petitparser: ^5.1.0
-
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.0.15
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
   test: ^1.22.0
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.4
 
 flutter:
 
