--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.0.15
-  intl: ^0.18.1
+  intl: ^0.18.0
+  flutter_localizations:
+    sdk: flutter
   
 dev_dependencies:
   flutter_test:
