--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.0.15
   intl: ^0.18.1
+  collection: ^1.17.1
   
 dev_dependencies:
   flutter_test:
