--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,13 @@ flutter:
           weight: 500
         - asset: fonts/Inter-SemiBold.ttf
           weight: 600
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins.ttf
+        - asset: fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: fonts/Poppins-SemiBold.ttf
+          weight: 600
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
